--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "css-loader": "^5.0.1",
+    "element-ui": "^2.14.0",
+    "lodash": "^4.17.20",
+    "sortablejs": "^1.12.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.5.1",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "xlsx": "^0.16.8"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
